--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body { font-family:Arial,sans-serif; margin:0; padding:0; color:#333; line-height:1.6; }
     header, main, footer { padding:16px; }
     header { background:#f5f5f5; text-align:center; position:running(header); }
-    h2 { position:running(header); }
+    h2 { position:running(header); margin-top:32px; }
     table { width:100%; border-collapse:collapse; margin:12px 0; }
     th, td { border:1px solid #ccc; padding:8px; vertical-align:top; }
     .plan { margin-bottom:32px; }
@@ -21,8 +21,9 @@
   </style>
 </head>
 <body>
+
 <header role="banner">
-  <img src="https://source.unsplash.com/featured/?okinawa,beach" alt="青い海と白砂の沖縄ビーチ" style="width:100%;height:auto;">
+  <img src="https://source.unsplash.com/featured/?okinawa,beach" alt="沖縄ビーチ" style="width:100%;height:auto;">
   <h1>名護ステイ 旅のしおり</h1>
   <p>2025/07/10 – 07/12</p>
 </header>
@@ -31,97 +32,71 @@
   ■天気予報  
   
 
-  ■07/11プラン詳細
-
-  <div class="plan" id="plan-relax">
+  ■のんびり映えプラン（7/11）
+  <div class="plan">
     <h2>のんびり映えプラン</h2>
     <figure>
-      <img src="https://source.unsplash.com/featured/?relax,okinawa" alt="のんびり映えプランのイメージ" style="width:100%;height:auto;">
+      <img src="https://source.unsplash.com/featured/?relax,okinawa" alt="リラックスビーチ" style="width:100%;height:auto;">
     </figure>
     <table>
-      <thead>
-        <tr><th>時刻</th><th>行程・魅力解説</th><th>費用</th><th>移動</th></tr>
-      </thead>
+      <thead><tr><th>時刻</th><th>行程・魅力</th><th>費用</th><th>移動</th></tr></thead>
       <tbody>
         <tr>
           <td>08:00</td>
-          <td>
-            <strong>ビュッフェ朝食</strong><br>
-            ホテル自慢の沖縄食材を使用し、海を望む窓際席で優雅に味わう至福のひととき。色とりどりの料理が一日の始まりを彩る。<br>
-            <small>位置:26.5923,127.9818｜<a href="https://www.oriental-okinawa.com/" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.5923,127.9818" target="_blank">Maps</a></small>
+          <td><strong>ビュッフェ朝食</strong><br>海を望む窓際で沖縄食材の料理を優雅に味わう至福の朝。<br>
+            <small>位置:26.5923,127.9818｜<a href="https://www.oriental-okinawa.com/" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5923,127.9818" target="_blank">Maps</a></small>
           </td>
           <td>¥0</td>
           <td>–</td>
         </tr>
         <tr>
           <td>10:00</td>
-          <td>
-            <strong>瀬底ビーチ散策</strong><br>
-            透明度抜群の海と白砂をゆったり散策。波音と潮風に包まれ、絶好のフォトスポットが点在するリラックスタイム。<br>
-            <small>位置:26.6160,127.8911｜<a href="https://okinawa-beach-sesoko.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.6160,127.8911" target="_blank">Maps</a></small>
+          <td><strong>瀬底ビーチ散策</strong><br>透明度抜群の海と白砂をゆったり散策。写真映えスポット多数。<br>
+            <small>位置:26.6160,127.8911｜<a href="https://okinawa-beach-sesoko.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6160,127.8911" target="_blank">Maps</a></small>
           </td>
-          <td>¥0</td>
-          <td>車15分・7km</td>
+          <td>¥0</td><td>車15分・7km</td>
         </tr>
         <tr>
           <td>12:00</td>
-          <td>
-            <strong>カフェ・ドゥ・ラメール</strong><br>
-            海を一望できるテラス席で、地元食材を活かしたスイーツや軽食を堪能。特製パフェは見た目も味も格別。<br>
-            <small>位置:26.6158,127.8905｜<a href="https://cafe-dulamer.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.6158,127.8905" target="_blank">Maps</a></small>
+          <td><strong>カフェ・ドゥ・ラメール</strong><br>海を望むテラスで特製パフェと軽食を堪能。<br>
+            <small>位置:26.6158,127.8905｜<a href="https://cafe-dulamer.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6158,127.8905" target="_blank">Maps</a></small>
           </td>
-          <td>¥3,500</td>
-          <td>車5分・2km</td>
+          <td>¥3,500</td><td>車5分・2km</td>
         </tr>
         <tr>
           <td>14:00</td>
-          <td>
-            <strong>オクマ展望台</strong><br>
-            標高100mの展望台から東海岸と深緑の森が織りなす絶景を一望。森林浴効果と絶景写真が楽しめる癒しスポット。<br>
-            <small>位置:26.4702,128.1359｜<a href="https://okuma-resort.com/view" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.4702,128.1359" target="_blank">Maps</a></small>
+          <td><strong>オクマ展望台</strong><br>東海岸と森を一望する大パノラマでリフレッシュ。<br>
+            <small>位置:26.4702,128.1359｜<a href="https://okuma-resort.com/view" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.4702,128.1359" target="_blank">Maps</a></small>
           </td>
-          <td>¥0</td>
-          <td>車20分・12km</td>
+          <td>¥0</td><td>車20分・12km</td>
         </tr>
         <tr>
           <td>16:00</td>
-          <td>
-            <strong>プールサイド休憩</strong><br>
-            プールサイドのバーでトロピカルカクテルを。潮風とプールサイドの景色が優雅な午後を演出。<br>
-            <small>位置:26.5923,127.9818｜<a href="https://www.oriental-okinawa.com/pool-bar" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.5923,127.9818" target="_blank">Maps</a></small>
+          <td><strong>プールサイド休憩</strong><br>プールサイドバーでカクテル。波音をBGMにリラックス。<br>
+            <small>位置:26.5923,127.9818｜<a href="https://www.oriental-okinawa.com/pool-bar" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5923,127.9818" target="_blank">Maps</a></small>
           </td>
-          <td>¥1,200</td>
-          <td>徒歩</td>
+          <td>¥1,200</td><td>徒歩</td>
         </tr>
         <tr>
           <td>18:30</td>
-          <td>
-            <strong>サンセット散歩</strong><br>
-            砂浜で刻一刻と変わる夕焼けを鑑賞。赤く染まる水平線が二人だけのロマンチックな時間を演出。<br>
-            <small>位置:26.5198,127.8684｜<a href="https://americanvillage.jp/sunset-beach" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.5198,127.8684" target="_blank">Maps</a></small>
+          <td><strong>サンセット散歩</strong><br>赤く染まる水平線を砂浜で眺めるロマンチックタイム。<br>
+            <small>位置:26.5198,127.8684｜<a href="https://americanvillage.jp/sunset-beach" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5198,127.8684" target="_blank">Maps</a></small>
           </td>
-          <td>¥0</td>
-          <td>車10分・5km</td>
+          <td>¥0</td><td>車10分・5km</td>
         </tr>
         <tr>
           <td>19:30</td>
-          <td>
-            <strong>ルーフトップバー</strong><br>
-            ホテル最上階から夜景と星空を一望。ジャズの調べとともに特製カクテルを楽しむ大人の空間。<br>
-            <small>位置:26.5923,127.9818｜<a href="https://www.oriental-okinawa.com/rooftop-bar" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.5923,127.9818" target="_blank">Maps</a></small>
+          <td><strong>ルーフトップバー</strong><br>夜景と星空を一望する大人の空間でカクテル。<br>
+            <small>位置:26.5923,127.9818｜<a href="https://www.oriental-okinawa.com/rooftop-bar" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5923,127.9818" target="_blank">Maps</a></small>
           </td>
-          <td>¥2,000</td>
-          <td>徒歩</td>
+          <td>¥2,000</td><td>徒歩</td>
         </tr>
         <tr>
           <td>21:00</td>
-          <td>
-            <strong>星空観察ツアー</strong><br>
-            専属ガイドとともに郊外へ移動し、満天の星空を望遠鏡で観察。天の川や流れ星を探しながら宇宙の神秘を体感。<br>
-            <small>位置:26.6762,127.9705｜<a href="https://okinawa-star.jp" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.6762,127.9705" target="_blank">Maps</a></small>
+          <td><strong>星空観察ツアー</strong><br>ガイド付きで満天の星空を観察。宇宙の神秘を体感。<br>
+            <small>位置:26.6762,127.9705｜<a href="https://okinawa-star.jp" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6762,127.9705" target="_blank">Maps</a></small>
           </td>
-          <td>¥3,000</td>
-          <td>車15分・8km</td>
+          <td>¥3,000</td><td>車15分・8km</td>
         </tr>
       </tbody>
     </table>
@@ -129,115 +104,86 @@
     <p>■注意点：貴重品は防水ケースへ、夜間は虫除けスプレー必携。</p>
   </div>
 
-  <div class="plan" id="plan-active">
+  ■アクティブ探検プラン（7/11）
+  <div class="plan">
     <h2>アクティブ探検プラン</h2>
     <figure>
-      <img src="https://source.unsplash.com/featured/?adventure,okinawa" alt="アクティブプランのイメージ" style="width:100%;height:auto;">
+      <img src="https://source.unsplash.com/featured/?adventure,okinawa" alt="アクティブプラン" style="width:100%;height:auto;">
     </figure>
     <table>
-      <thead>
-        <tr><th>時刻</th><th>行程・魅力解説</th><th>費用</th><th>移動</th></tr>
-      </thead>
+      <thead><tr><th>時刻</th><th>行程・魅力</th><th>費用</th><th>移動</th></tr></thead>
       <tbody>
         <tr>
           <td>08:00</td>
-          <td>
-            <strong>SUP体験</strong><br>
-            穏やかな朝の海を漕ぎ出す爽快アクティビティ。透明度の高い海面に映る景色が美しく、写真映えも抜群。<br>
-            <small>位置:26.5850,127.9750｜<a href="https://okinawa-sup.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.5850,127.9750" target="_blank">Maps</a></small>
-          </td>
-          <td>¥8,000</td>
-          <td>車10分・5km</td>
+          <td><strong>SUP体験</strong><br>朝の穏やかな海を漕ぎ出す爽快体験。透明な海が美しい。<br>
+            <small>位置:26.5850,127.9750｜<a href="https://okinawa-sup.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5850,127.9750" target="_blank">Maps</a></small>
+          </td><td>¥8,000</td><td>車10分・5km</td>
         </tr>
         <tr>
           <td>10:00</td>
-          <td>
-            <strong>シュノーケリング</strong><br>
-            サンゴ礁と熱帯魚が泳ぐ海中世界を間近で観察。マスク越しの景色はまるで別世界の神秘体験。<br>
-            <small>位置:26.6950,127.8770｜<a href="https://okinawa-snorkeling.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.6950,127.8770" target="_blank">Maps</a></small>
-          </td>
-          <td>¥7,000</td>
-          <td>車20分・15km</td>
+          <td><strong>シュノーケリング</strong><br>珊瑚礁と熱帯魚の海中散策。別世界の美しさを満喫。<br>
+            <small>位置:26.6950,127.8770｜<a href="https://okinawa-snorkeling.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6950,127.8770" target="_blank">Maps</a></small>
+          </td><td>¥7,000</td><td>車20分・15km</td>
         </tr>
         <tr>
           <td>12:30</td>
-          <td>
-            <strong>沖縄そば「田舎家」ランチ</strong><br>
-            こだわりの手打ち麺と鰹出汁が絶妙。地元で愛される味を堪能し、ほっとするひとときを。<br>
-            <small>位置:26.5920,127.9750｜<a href="https://okinawa-soba-inakaya.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.5920,127.9750" target="_blank">Maps</a></small>
-          </td>
-          <td>¥1,200</td>
-          <td>車15分・8km</td>
+          <td><strong>沖縄そば「田舎家」</strong><br>手打ち麺と鰹出汁の島そば。ほっこり温まる味。<br>
+            <small>位置:26.5920,127.9750｜<a href="https://okinawa-soba-inakaya.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5920,127.9750" target="_blank">Maps</a></small>
+          </td><td>¥1,200</td><td>車15分・8km</td>
         </tr>
         <tr>
           <td>14:00</td>
-          <td>
-            <strong>洞窟探検ツアー</strong><br>
-            数万年の時を刻むケラマ洞窟を探検。幻想的な鍾乳石群と静寂な空間が非日常体験を演出。<br>
-            <small>位置:26.3040,127.8710｜<a href="https://keramacave.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.3040,127.8710" target="_blank">Maps</a></small>
-          </td>
-          <td>¥3,500</td>
-          <td>車30分・20km</td>
+          <td><strong>洞窟探検ツアー</strong><br>神秘的なケラマ洞窟で鍾乳石群を探検。非日常感を体験。<br>
+            <small>位置:26.3040,127.8710｜<a href="https://keramacave.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.3040,127.8710" target="_blank">Maps</a></small>
+          </td><td>¥3,500</td><td>車30分・20km</td>
         </tr>
         <tr>
           <td>16:30</td>
-          <td>
-            <strong>マングローブカヤック</strong><br>
-            ヤンバルのマングローブ林を漕ぎ進む癒しツアー。野生動植物にも出会える自然満喫体験。<br>
-            <small>位置:26.7900,127.9920｜<a href="https://mangrove-kayak-okinawa.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.7900,127.9920" target="_blank">Maps</a></small>
-          </td>
-          <td>¥6,000</td>
-          <td>車25分・15km</td>
+          <td><strong>マングローブカヤック</strong><br>マングローブ林を静かに漕ぐ大自然ツアー。野生動植物観察も。<br>
+            <small>位置:26.7900,127.9920｜<a href="https://mangrove-kayak-okinawa.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.7900,127.9920" target="_blank">Maps</a></small>
+          </td><td>¥6,000</td><td>車25分・15km</td>
         </tr>
         <tr>
           <td>18:30</td>
-          <td>
-            <strong>ビーチBBQディナー</strong><br>
-            砂浜で炭火BBQ。新鮮魚介や地元野菜を豪快に焼き、泡盛と共に夏の夜を満喫。<br>
-            <small>位置:26.5198,127.8684｜<a href="https://sunsetbbq.okinawa" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.5198,127.8684" target="_blank">Maps</a></small>
-          </td>
-          <td>¥4,000</td>
-          <td>徒歩</td>
+          <td><strong>ビーチBBQディナー</strong><br>砂浜で炭火焼きBBQを楽しむ贅沢な夜。<br>
+            <small>位置:26.5198,127.8684｜<a href="https://sunsetbbq.okinawa" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5198,127.8684" target="_blank">Maps</a></small>
+          </td><td>¥4,000</td><td>徒歩</td>
         </tr>
         <tr>
           <td>20:30</td>
-          <td>
-            <strong>ナイトマーケット散策</strong><br>
-            名護市中心部の夜市を散策。屋台グルメや手作り雑貨が並ぶ賑やかな夜を楽しむ。<br>
-            <small>位置:26.5923,127.9818｜<a href="https://nagonightmarket.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/dir/?api=1&destination=26.5923,127.9818" target="_blank">Maps</a></small>
-          </td>
-          <td>¥1,000</td>
-          <td>車10分・6km</td>
+          <td><strong>ナイトマーケット</strong><br>名護の夜市で屋台グルメ・雑貨散策。地元の賑わいを満喫。<br>
+            <small>位置:26.5923,127.9818｜<a href="https://nagonightmarket.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5923,127.9818" target="_blank">Maps</a></small>
+          </td><td>¥1,000</td><td>車10分・6km</td>
         </tr>
       </tbody>
     </table>
-    <p>■服装ガイド：ラッシュガード＋運動靴（夕方以降は薄手長袖推奨）</p>
-    <p>■注意点：水分・酔い止め必携。波高2m超で中止の場合あり。</p>
+    <p>■服装ガイド：ラッシュガード＋運動靴（夕方は薄手長袖推奨）</p>
+    <p>■注意点：水分・酔い止め必携。波高2m超で中止。</p>
   </div>
 
   ■おすすめグルメ  
   <ul>
-    <li><strong>百年古家 大家</strong>（食べログ3.49/708件 、Google4.0/約1,200件 ）  
-      住所: 名護市中山90（26.6190,127.9805）｜<a href="https://ufuya.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6190,127.9805" target="_blank">Maps</a>
+    <li><strong>百年古家 大家</strong>（食べログ3.49/708件、Google4.0/約1,200件）<br>
+      名護市中山90（26.6190,127.9805）｜<a href="https://ufuya.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6190,127.9805" target="_blank">Maps</a>
     </li>
-    <li><strong>美ら花 別邸</strong>（食べログ3.47/317件 、Google4.3/約850件 ）  
-      住所: 名護市宮里439（26.5800,127.9700）｜<a href="https://churahana-bettei.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5800,127.9700" target="_blank">Maps</a>
+    <li><strong>美ら花 別邸</strong>（食べログ3.47/317件、Google4.3/約850件）<br>
+      名護市宮里439（26.5800,127.9700）｜<a href="https://churahana-bettei.com" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5800,127.9700" target="_blank">Maps</a>
     </li>
-    <li><strong>さくら食堂</strong>（食べログ3.39/88件 、Google4.1/約300件 ）  
-      住所: 名護市営市場2階（26.5890,127.9770）｜<a href="#" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5890,127.9770" target="_blank">Maps</a>
+    <li><strong>さくら食堂</strong>（食べログ3.39/88件、Google4.1/約300件）<br>
+      名護市営市場2階（26.5890,127.9770）｜<a href="https://tabelog.com/okinawa/A4702/A470201/47009138/" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.5890,127.9770" target="_blank">Maps</a>
     </li>
-    <li><strong>名護曲レストラン</strong>（食べログ3.41/188件 、Google4.1/392件 ）  
-      住所: 名護市世冨慶574（26.6150,127.9700）｜<a href="https://tabelog.com/okinawa/A4702/A470201/47000288/" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6150,127.9700" target="_blank">Maps</a>
+    <li><strong>名護曲レストラン</strong>（食べログ3.41/188件、Google4.1/約392件）<br>
+      名護市世冨慶574（26.6150,127.9700）｜<a href="https://tabelog.com/okinawa/A4702/A470201/47000288/" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6150,127.9700" target="_blank">Maps</a>
     </li>
-    <li><strong>ステーキハウス88 美ら海店</strong>（食べログ3.42/255件 、Yahoo!マップ4.21/98件 ）  
-      住所: 国頭郡本部町浦崎862-1（26.6940,127.9180）｜<a href="http://s88.co.jp/shop/88chura" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6940,127.9180" target="_blank">Maps</a>
+    <li><strong>ステーキハウス88 美ら海店</strong>（食べログ3.42/255件、Google4.2/約98件）<br>
+      国頭郡本部町浦崎278-3（26.6940,127.9180）｜<a href="https://s88.co.jp/shop/88chura" target="_blank">公式</a>｜<a href="https://www.google.com/maps/search/?api=1&query=26.6940,127.9180" target="_blank">Maps</a>
     </li>
   </ul>
 </main>
 
 <footer role="contentinfo">
   <p>情報は2025-07-07時点。公式確認必須。</p>
-  <p><a href="https://sho71004.github.io/repo-name/">GitHub Pages</a></p>
+  <p><a href="https://sho71004.github.io/repo-name/" target="_blank">GitHub Pages</a></p>
 </footer>
 
 <script>
@@ -246,5 +192,6 @@
     cb.addEventListener('change', ()=> localStorage.setItem(cb.id, cb.checked));
   });
 </script>
+
 </body>
 </html>
